--- a/examples/svelte/basic/package.json
+++ b/examples/svelte/basic/package.json
@@ -25,8 +25,8 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@felte/reporter-svelte": "workspace:^1.0.0-next.20",
-    "felte": "workspace:^1.0.0-next.25",
+    "@felte/reporter-svelte": "next",
+    "felte": "next",
     "sirv-cli": "^2.0.0"
   }
 }
