fix(examples): fix start script

--- a/examples/svelte/basic/package.json
+++ b/examples/svelte/basic/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "rollup -c -w",
+    "preview": "sirv public --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
