fix: fix example names

--- a/examples/svelte/basic/package.json
+++ b/examples/svelte/basic/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "basic",
+  "name": "@example/svelte-basic",
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
