--- a/examples/react/basic/package.json
+++ b/examples/react/basic/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "basic",
+  "name": "@example/react-basic",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
