--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@felte/core",
   "version": "1.0.0-next.25",
   "description": "Core utility for Felte's integration with front-end frameworks",
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/index.cjs",
   "browser": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
@@ -44,7 +44,7 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
+      "require": "./dist/cjs/index.cjs",
       "default": "./dist/esm/index.js"
     },
     "./package.json": "./package.json"
