--- a/packages/extender-persist/package.json
+++ b/packages/extender-persist/package.json
@@ -2,8 +2,8 @@
   "name": "@felte/extender-persist",
   "version": "1.0.0-next.20",
   "description": "Use localStorage to persist your Felte forms",
-  "main": "dist/index.js",
-  "browser": "dist/index.js",
+  "main": "dist/index.cjs",
+  "browser": "dist/index.mjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -40,7 +40,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
