--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -2,7 +2,7 @@
   "name": "felte",
   "version": "1.0.0-next.25",
   "description": "An extensible form library for Svelte",
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/index.cjs",
   "browser": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
@@ -48,7 +48,7 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
+      "require": "./dist/cjs/index.cjs",
       "default": "./dist/esm/index.js"
     },
     "./package.json": "./package.json"
