--- a/packages/reporter-react/package.json
+++ b/packages/reporter-react/package.json
@@ -2,7 +2,7 @@
   "name": "@felte/reporter-react",
   "version": "1.0.0-next.22",
   "description": "An error reporter for Felte using a React component",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/esm/index.js",
   "sideEffects": false,
   "author": "Pablo Berganza <pablo@berganza.dev>",
@@ -24,7 +24,7 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "default": "./dist/esm/index.js"
     },
     "./package.json": "./package.json"
