--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -2,9 +2,9 @@
   "name": "@felte/reporter-svelte",
   "version": "1.0.0-next.21",
   "description": "An error reporter for Felte using a Svelte component",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "svelte": "src/index.js",
-  "browser": "dist/index.js",
+  "browser": "dist/index.mjs",
   "module": "dist/index.mjs",
   "types": "types/index.d.ts",
   "type": "module",
@@ -54,7 +54,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
