--- a/packages/validator-superstruct/package.json
+++ b/packages/validator-superstruct/package.json
@@ -2,8 +2,8 @@
   "name": "@felte/validator-superstruct",
   "version": "1.0.0-next.20",
   "description": "A package to use Superstruct validation with Felte",
-  "main": "dist/index.js",
-  "browser": "dist/index.js",
+  "main": "dist/index.cjs",
+  "browser": "dist/index.mjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -46,7 +46,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
