--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@typescript-eslint/parser": "^5.9.1",
     "all-contributors-cli": "^6.20.0",
     "babel-jest": "^26.6.3",
-    "c8": "^7.11.0",
     "chai": "^4.3.6",
     "chai-dom": "^1.11.0",
     "cross-env": "^7.0.3",
@@ -50,11 +49,12 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "eslint-plugin-testing-library": "^4.0.1",
     "front-matter": "^4.0.2",
+    "global-jsdom": "^8.4.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jsdom": "^19.0.0",
-    "jsdom-global": "^3.0.2",
     "mdsvex": "^0.9.0",
+    "nyc": "^15.1.0",
     "pinst": "^2.1.4",
     "pnpm": "^6.29.1",
     "prettier": "^2.2.1",
