fix(reporter-svelte): show message on render (and move to uvu)

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -35,7 +35,7 @@
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm build && pnpm test",
     "test": "uvu -r tsm -r global-jsdom/register tests -i common",
-    "test:ci": "nyc pnpm test"
+    "test:ci": "nyc -n src pnpm test"
   },
   "bugs": {
     "url": "https://github.com/pablo-abc/felte/issues"
