--- a/packages/felte/package.json
+++ b/packages/felte/package.json
@@ -28,7 +28,7 @@
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm build && pnpm test",
     "test": "uvu -r module-alias/register -r tsm -r global-jsdom/register tests -i common -i mocks",
-    "test:ci": "nyc pnpm test"
+    "test:ci": "nyc -n src pnpm test"
   },
   "peerDependencies": {
     "svelte": "^3.31.0"
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "module-alias": "^2.2.2",
-    "svelte": "^3.46.4"
+    "svelte": "^3.46.4",
+    "uvu": "^0.5.3"
   },
   "exports": {
     ".": {
