--- a/packages/reporter-svelte/package.json
+++ b/packages/reporter-svelte/package.json
@@ -26,9 +26,8 @@
     "build": "pnpm prebuild && cross-env NODE_ENV=production rollup -c",
     "dev": "rollup -cw",
     "prepublishOnly": "pnpm build && pnpm test",
-    "test": "jest",
-    "test:uvu": "uvu -r tsm -r ./svelte-register.js -r global-jsdom/register tests -i common -i test -i .svelte",
-    "test:ci": "jest --ci --coverage"
+    "test": "uvu -r tsm -r ./svelte-register.js -r global-jsdom/register -r module-alias/register tests -i common -i test -i .svelte",
+    "test:ci": "nyc -n src pnpm test"
   },
   "license": "MIT",
   "dependencies": {
@@ -44,12 +43,14 @@
   ],
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
+    "@testing-library/svelte": "^3.0.3",
     "felte": "workspace:*",
     "module-alias": "^2.2.2",
     "pirates": "^4.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.46.4",
-    "svelte-preprocess": "^4.6.9"
+    "svelte-preprocess": "^4.6.9",
+    "uvu": "^0.5.3"
   },
   "peerDependencies": {
     "svelte": "^3.31.0"
@@ -61,5 +62,10 @@
       "default": "./dist/index.mjs"
     },
     "./package.json": "./package.json"
+  },
+  "_moduleAliases": {
+    "svelte": "node_modules/svelte/index.mjs",
+    "svelte/store": "node_modules/svelte/store/index.mjs",
+    "svelte/internal": "node_modules/svelte/internal/index.mjs"
   }
 }
