--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^13.1.3",
     "@types/chai": "^4.3.0",
-    "@types/chai-dom": "^0.0.12",
     "@types/jest": "^26.0.20",
     "@types/jsdom-global": "^3.0.2",
     "@types/sinon": "^10.0.10",
@@ -38,7 +37,7 @@
     "all-contributors-cli": "^6.20.0",
     "babel-jest": "^26.6.3",
     "chai": "^4.3.6",
-    "chai-dom": "^1.11.0",
+    "chai-jsdom": "^0.2.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.2.0",
