--- a/examples/react/basic/package.json
+++ b/examples/react/basic/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@felte/react": "^1.0.0-next.28",
-    "@felte/reporter-react": "^1.0.0-next.22",
+    "@felte/react": "next",
+    "@felte/reporter-react": "next",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
