--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "all-contributors-cli": "^6.20.0",
-    "chai": "^4.3.6",
-    "chai-jsdom": "^0.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.2.0",
@@ -69,6 +67,8 @@
     "typedoc": "^0.22.10",
     "typescript": "^4.5.5",
     "uvu": "^0.5.3",
+    "uvu-expect": "^0.1.4",
+    "uvu-expect-dom": "^0.1.0",
     "vest": "^4.0.1",
     "yup": "^0.32.9",
     "zod": "^1.11.13"
