--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.14.5",
     "@babel/register": "^7.17.0",
     "@felte/solid": "workspace:*",
