--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,21 +10,21 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "1.0.0-next.26",
     "@sveltejs/kit": "1.0.0-next.260",
-    "autoprefixer": "^10.3.1",
-    "cssnano": "^5.0.6",
-    "dotenv": "^11.0.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "front-matter": "^4.0.2",
-    "mdsvex": "^0.9.0",
-    "postcss": "^8.4.5",
-    "postcss-load-config": "^3.1.0",
-    "postcss-preset-env": "^7.0.2",
-    "prettier": "^2.2.1",
-    "svelte": "^3.44.3",
-    "svelte-focus-on": "^0.1.4",
-    "svelte-preprocess": "^4.7.4",
-    "tippy.js": "^6.3.1",
-    "yup": "^0.32.9"
+    "autoprefixer": "10.3.1",
+    "cssnano": "5.0.6",
+    "dotenv": "11.0.0",
+    "eslint-plugin-svelte3": "3.2.0",
+    "front-matter": "4.0.2",
+    "mdsvex": "0.9.0",
+    "postcss": "8.4.5",
+    "postcss-load-config": "3.1.0",
+    "postcss-preset-env": "7.0.2",
+    "prettier": "2.2.1",
+    "svelte": "3.44.3",
+    "svelte-focus-on": "0.1.4",
+    "svelte-preprocess": "4.7.4",
+    "tippy.js": "6.3.1",
+    "yup": "0.32.9"
   },
   "type": "module",
   "dependencies": {
@@ -33,14 +33,14 @@
     "@felte/reporter-tippy": "^1.0.0-next.19",
     "@felte/validator-yup": "^1.0.0-next.18",
     "felte": "^1.0.0-next.22",
-    "flexsearch": "^0.7.21",
-    "focus-visible": "^5.2.0",
-    "html-minifier": "^4.0.0",
-    "prism-svelte": "^0.4.7",
-    "prismjs": "^1.26.0",
-    "svelte-lazy": "^1.1.0",
-    "svelte-markdown": "^0.2.2",
-    "svelte-portal": "^2.1.2"
+    "flexsearch": "0.7.21",
+    "focus-visible": "5.2.0",
+    "html-minifier": "4.0.0",
+    "prism-svelte": "0.4.7",
+    "prismjs": "1.26.0",
+    "svelte-lazy": "1.1.0",
+    "svelte-markdown": "0.2.2",
+    "svelte-portal": "2.1.2"
   },
   "volta": {
     "node": "14.16.0"
