--- a/packages/reporter-solid/package.json
+++ b/packages/reporter-solid/package.json
@@ -50,6 +50,8 @@
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.5",
     "@types/node": "^15.12.4",
+    "acorn": "^8.7.0",
+    "acorn-jsx": "^5.3.2",
     "babel-preset-solid": "^1.3.5",
     "nyc": "^15.1.0",
     "regenerator-runtime": "^0.13.9",
