--- a/packages/reporter-react/tsconfig.json
+++ b/packages/reporter-react/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "declaration": true,
     "target": "es2017",
     "newLine": "LF",
     "moduleResolution": "node",
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
-    "outDir": "./dist",
-    "module": "esnext"
+    "module": "esnext",
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "./dist"
   },
   "include": ["./src", "tests"],
   "exclude": ["node_modules/"]
