--- a/examples/react/basic/package.json
+++ b/examples/react/basic/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@felte/react": "next",
-    "@felte/reporter-react": "next",
+    "@felte/react": "latest",
+    "@felte/reporter-react": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
