--- a/examples/svelte/basic/package.json
+++ b/examples/svelte/basic/package.json
@@ -20,7 +20,7 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
-    "@felte/reporter-svelte": "next",
-    "felte": "next"
+    "@felte/reporter-svelte": "latest",
+    "felte": "latest"
   }
 }
