chore: update deps

--- a/examples/solid/basic/package.json
+++ b/examples/solid/basic/package.json
@@ -16,7 +16,7 @@
     "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
-    "@felte/reporter-solid": "latest",
+    "@felte/reporter-solid": "^1.1.1",
     "@felte/solid": "latest",
     "solid-js": "^1.3.3"
   }
