--- a/examples/react/basic/package.json
+++ b/examples/react/basic/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@felte/react": "latest",
-    "@felte/reporter-react": "latest",
+    "@felte/reporter-react": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
