feat(turbo): added chodikar watcher as alternative to dev script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build_": "pnpm -r build --filter='!root' --filter='!@felte/site' --filter='!@example/*'",
     "build": "pnpm turbo run build",
     "<!-- Turbo bug / missing feature -->": "https://github.com/vercel/turborepo/pull/81#issuecomment-1058911676 --scope=\"@felte/*\" --scope=\"felte\" --scope=\"!@example/*\" --scope=\"!@felte/site\" --ignore=\"examples/**/*\" --ignore=\"packages/site/**/*\"",
-    "dev": "pnpm -r --parallel dev --filter='!@felte/site' --filter='!@example/*'",
+    "dev_": "pnpm -r --parallel dev --filter='!@felte/site' --filter='!@example/*'",
+    "dev": "pnpm build && chokidar \"packages/**/*.ts\" \"packages/**/*.js\" \"packages/**/*.cjs\" \"packages/**/*.mjs\" \"packages/**/*.tsx\" \"packages/**/*.css\" \"packages/**/*.json\" \"packages/**/*.md\" \"packages/**/*.svg\" \"packages/**/*.png\" --ignore \"**/node_modules/**/*\" --ignore \"**/.turbo/**/*\" --ignore \"**/dist/**/*\" --ignore \"**/.svelte-kit/**/*\" --ignore \"**/build/**/*\" -c \"pnpm build\"",
     "prepare": "husky install",
     "publish": "pnpm i && pnpm lint && pnpm -r publish",
     "clean-turbo": "rimraf \"**/node_modules/.cache/turbo\" && rimraf \"**/.turbo\""
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "all-contributors-cli": "^6.20.0",
+    "chokidar-cli": "^3.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.2.0",
