--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
 	"pipeline": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": ["dist/**"]
+			"outputs": ["dist/**", "build/**"]
 		}
 	}
 }
