--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-rename-node-modules": "^1.3.1",
     "rollup-plugin-ts": "^2.0.5",
+    "rollup-plugin-terser": "^7.0.2",
     "sinon": "^13.0.1",
     "superstruct": "^0.15.0",
     "svelte": "^3.31.0",
