feat(element): add custom element package

--- a/examples/lit/basic/package.json
+++ b/examples/lit/basic/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@felte/vanilla": "workspace:*",
+    "@felte/element": "workspace:*",
     "@felte/reporter-element": "workspace:*",
     "lit": "^2.0.2"
   },
