--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -34,6 +34,9 @@
     "@felte/core": "workspace:*",
     "lit": "^2.2.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
