build(element): output modules in separate files for tree shaking

--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -43,6 +43,8 @@
       "require": "./dist/index.cjs",
       "default": "./dist/esm/index.js"
     },
+    "./dist/esm/felte-form": "./dist/esm/felte-form.js",
+    "./dist/esm/felte-field": "./dist/esm/felte-field.js",
     "./package.json": "./package.json"
   }
 }
