fix(core): stop using CustomEvent for SSR

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -27,11 +27,11 @@
   },
   "type": "module",
   "dependencies": {
-    "@felte/reporter-dom": "^1.0.0",
-    "@felte/reporter-svelte": "^1.0.0",
-    "@felte/reporter-tippy": "^1.0.0",
-    "@felte/validator-yup": "^1.0.0",
-    "felte": "^1.0.0",
+    "@felte/reporter-dom": "latest",
+    "@felte/reporter-svelte": "latest",
+    "@felte/reporter-tippy": "latest",
+    "@felte/validator-yup": "latest",
+    "felte": "latest",
     "flexsearch": "0.7.21",
     "focus-visible": "5.2.0",
     "html-minifier": "4.0.0",
