--- a/packages/reporter-element/package.json
+++ b/packages/reporter-element/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.1",
   "description": "An error reporter for Felte using custom elements",
   "main": "dist/index.cjs",
-  "module": "dist/esm/index.js",
-  "browser": "dist/esm/index.js",
+  "module": "dist/index.js",
+  "browser": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "type": "module",
   "scripts": {
@@ -26,6 +26,9 @@
     "validation",
     "felte"
   ],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@felte/core": "workspace:*",
     "tslib": "^2.3.1",
@@ -39,11 +42,7 @@
     "access": "public"
   },
   "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/index.cjs",
-      "default": "./dist/esm/index.js"
-    },
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   }
 }
