refactor: use vanilla custom elements instead of lit

--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -34,8 +34,7 @@
     "uvu": "^0.5.3"
   },
   "dependencies": {
-    "@felte/core": "workspace:*",
-    "lit": "^2.2.0"
+    "@felte/core": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
