--- a/examples/web-component/basic/package.json
+++ b/examples/web-component/basic/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@example/webcomponent-basic",
+  "description": "Example of using Felte with vanilla JS using @felte/element and @felte/reporter-element",
   "private": true,
   "version": "0.0.0",
   "scripts": {
