--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "zod": "^1.11.13"
   },
   "volta": {
-    "node": "14.15.5",
-    "npm": "6.14.13"
+    "node": "14.19.0"
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.14.5",
