--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -33,11 +33,11 @@
     "felte": "^1.1.3",
     "flexsearch": "^0.7.21",
     "focus-visible": "^5.2.0",
+    "lit": "^2.0.2",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.27.0",
     "svelte-markdown": "^0.2.2",
     "tippy.js": "^6.3.7",
-    "uhtml": "^2.8.0",
     "yup": "^0.32.11"
   }
 }
