--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "ES2015",
     "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false,
     "baseUrl": ".",
     "paths": {
       "components:*": ["src/components/*"],
