--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File a bug report
-title: ""
-labels: ["bug"]
+title: ''
+labels: ['bug']
 assignees:
   - pablo-abc
 body:
@@ -26,48 +26,48 @@ body:
         2. Click on '....'
         3. Scroll down to '....'
         4. See error
-      validations:
-        required: false
-    - type: input
-      id: example
-      attributes:
-        label: Small reproduction example
-        description: If possible, a small reproduction would help us solve this quicker!
-        placeholder: https://codesandbox.io/s/...
-      validations:
-        required: false
-    - type: textarea
-      id: environment
-      attributes:
-        label: Environment
-        description: |
-          Please complete the following information.
-          Example:
-            - OS: [e.g. iOS]
-            - Browser: [e.g. chrome, safari]
-            - Version: [e.g. felte@1.0.0, @felte/reporter-svelte@1.0.0]
-        value: |
-          - OS:
-          - Browser:
-          - Version:
-        render: markdown
-      validations:
-        required: false
-    - type: textarea
-      id: screenshots
-      attributes:
-        label: Screenshots
-        description: |
-          If applicable, add screenshots to help explain your problem.
+    validations:
+      required: false
+  - type: input
+    id: example
+    attributes:
+      label: Small reproduction example
+      description: If possible, a small reproduction would help us solve this quicker!
+      placeholder: https://codesandbox.io/s/...
+    validations:
+      required: false
+  - type: textarea
+    id: environment
+    attributes:
+      label: Environment
+      description: |
+        Please complete the following information.
+        Example:
+          - OS: [e.g. iOS]
+          - Browser: [e.g. chrome, safari]
+          - Version: [e.g. felte@1.0.0, @felte/reporter-svelte@1.0.0]
+      value: |
+        - OS:
+        - Browser:
+        - Version:
+      render: markdown
+    validations:
+      required: false
+  - type: textarea
+    id: screenshots
+    attributes:
+      label: Screenshots
+      description: |
+        If applicable, add screenshots to help explain your problem.
 
-          Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
-      validations:
-        required: false
-    - type: textarea
-      id: context
-      attributes:
-        label: Additional context
-        description: Add any other context about your problem here.
-        render: markdown
-      validations:
-        required: false
+        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+    validations:
+      required: false
+  - type: textarea
+    id: context
+    attributes:
+      label: Additional context
+      description: Add any other context about your problem here.
+      render: markdown
+    validations:
+      required: false
